--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ h1 {
 }
 body {
 	background: url("../img/game-bg.jpg") no-repeat center/cover;
-	width: 900px;
+	max-width: 900px;
 	margin: 10px auto;
 	font-size: 1.2em;
 	font-weight: normal;
@@ -24,7 +24,7 @@ body {
 header, section, footer {
 	width: 100%;
 	margin: 10px 0px;
-	padding: 30px 20px;
+	padding: 30px 0px;
 	text-align: center;
 	background-color: rgba(200,200,200, 0.6);
 	width: 100%;
@@ -110,8 +110,8 @@ button:active {
 /**************************************
 	DIVS & SPANS
 **************************************/
-#output-wrapper, #progressbar {
-	width: 600px;
+#output-wrapper {
+	max-width: 600px;
 	height: 50px;
 	/*background: -webkit-linear-gradient(bottom, rgb(205,205,205), rgb(235,235,235), rgb(185,185,185));*/
 	margin: 0 auto;
@@ -122,14 +122,18 @@ button:active {
 #progressbar {
 	/*background: -webkit-linear-gradient(bottom, rgb(245,0,0), rgb(255,135,135), rgb(255,0,0));*/
 	width: 0%;
+	height: 50px;
 	margin: 0px;
 	border: none;
+	border-radius: 15px;
+	text-align: center;
 }
 
-#progressbar span {
+#output {
 	display: block;
-	position: absolute;
-	margin: 15px auto;
+	margin-top: -35px;
+	margin-left: auto;
+	margin-right: auto;
 	text-align: center;
-	width: 600px;
+	max-width: 600px;
 }
